--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
             <classifier>mule-plugin</classifier>
             <scope>test</scope>
         </dependency>
+        <dependency>
+             <groupId>com.mulesoft.munit</groupId>
+             <artifactId>munit-remote</artifactId>
+             <version>2.1.4</version>
+             <scope>test</scope>
+         </dependency>
     </dependencies>
 
 	<repositories>
