--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
         <dependency>
              <groupId>com.mulesoft.munit</groupId>
              <artifactId>munit-remote</artifactId>
-             <version>2.1.4</version>
+             <version>${munit.version}</version>
              <scope>test</scope>
          </dependency>
     </dependencies>
