--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 						<properties>
 							<anypoint.platform.client_id>${environment.clientId}</anypoint.platform.client_id>
 							<anypoint.platform.client_secret>${environment.clientSecret}</anypoint.platform.client_secret>
+							<mule.env>${mule.env}</mule.env>
 						</properties>
 					</cloudHubDeployment>
 					<classifier>mule-application</classifier>
