--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.fpp</groupId>
@@ -14,13 +16,23 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<app.runtime>4.1.5</app.runtime>
-		<mule.maven.plugin.version>3.1.6</mule.maven.plugin.version>
+		<mule.maven.plugin.version>3.3.5</mule.maven.plugin.version>
 		<company>fpp</company>
 		<munit.version>2.1.4</munit.version>
+		<maven.release.plugin.version>2.5.3</maven.release.plugin.version>
 	</properties>
-
+	<scm>
+		<connection>scm:git:ssh://git@github.com:fperezpa/mule4-cicd.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:fperezpa/mule4-cicd.git</developerConnection>
+		<url>https://github.com/fperezpa/mule4-cicd</url>
+	</scm>
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>${maven.release.plugin.version}</version>
+			</plugin>
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-maven-plugin</artifactId>
@@ -28,7 +40,7 @@
 				<extensions>true</extensions>
 				<configuration>
 					<cloudHubDeployment>
-					    <artifact>target/${project.build.finalName}-${project.packaging}.jar</artifact>
+						<artifact>target/${project.build.finalName}-${project.packaging}.jar</artifact>
 						<uri>https://anypoint.mulesoft.com</uri>
 						<muleVersion>${app.runtime}</muleVersion>
 						<username>${username}</username>
