[maven-release-plugin] prepare release cicd-app-1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.fpp</groupId>
 	<artifactId>cicd-app</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>mule-application</packaging>
 
 	<name>cicd-app</name>
@@ -25,7 +23,8 @@
 		<connection>scm:git:ssh://git@github.com:fperezpa/mule4-cicd.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:fperezpa/mule4-cicd.git</developerConnection>
 		<url>https://github.com/fperezpa/mule4-cicd</url>
-	</scm>
+	  <tag>cicd-app-1.0.0</tag>
+  </scm>
 	<build>
 		<plugins>
 			<plugin>
